--- a/styles.css
+++ b/styles.css
@@ -210,15 +210,16 @@ div#intro-holder.main-script {
 }
 #result-holder p:first-child {
     padding-top: 16px;
+    font-weight: 500;
 }
 #playlist-title {
     text-align: left;
     font-size: 64px;
     line-height: .8;
     font-weight: 600;
+    letter-spacing: 2px;
 }
 iframe {
-    letter-spacing: 2px;
     max-width: 976px;
 }
 #retake-btn {
@@ -238,15 +239,14 @@ iframe {
 }
 .swiper-wrapper {
     width: 100%;
-    height: 80%;
+    height: 192px;
     display: flex;
     align-items: center;
 }
 .swiper-slide {
-    height: inherit;
-    width: 800px;
+    overflow: hidden;
     box-sizing: border-box;
-    border-radius: 5% / 10% 10%;
+    border-radius: 4% / 6% 6%;
     display: flex;
     color: #ffffff;
     font-size: 2rem;
@@ -256,7 +256,11 @@ iframe {
 }
 .swiper-slide div.iframe-holder {
     position: absolute;
-    transform: rotate(-25deg) scale(1.75) translate(148px, 224px);
+    transform: rotate(-25deg) scale(.8) translate(68px, 73px);
+}
+.iframe-holder iframe {
+    width: 227px;
+    height: 360px;
 }
 #delete-btn {
     width: 184px;
@@ -318,7 +322,6 @@ footer small {
     }
     #result-holder p:first-child {
         font-size: 18px;
-        font-weight: 500;
     }
     #playlist-title{
         letter-spacing: 2px;
@@ -332,7 +335,6 @@ footer small {
     }
     .swiper-slide {
         position: relative;
-        overflow: hidden;
         height: 416px;
     }
     .swiper-slide h2 {
@@ -343,6 +345,9 @@ footer small {
     .swiper-slide iframe {
         height: 354px;
         width: 330px;
+    }
+    .swiper-slide div.iframe-holder {
+        transform: rotate(-25deg) scale(1.75) translate(148px, 224px);
     }
     #delete-btn {
         position: absolute;
